Estilos de los Forms

--- a/src/Stylesheets/Variables.scss
+++ b/src/Stylesheets/Variables.scss
@@ -10,8 +10,8 @@ $font-body: "Roboto", Helvetica, sans-serif;
 $font-very-small: 0.75rem;
 $font-small: 0.875rem;
 $font-normal: 1rem;
-$font-subtitle: 1.5rem;
-$font-title: 2rem;
+$font-big: 1.5rem;
+$font-huge: 2rem;
 //Colores
 //Color Primario
 $primary-color-lighter: #448a8d;
@@ -57,3 +57,5 @@ $accent-color2-darker: #aa6e0e;
 
 $blanco-puro: #ffffff;
 $gris-basico: #fafafa;
+$gris-intermedio: #636363;
+$gris-oscuro: #757575;
