algunos componentes creados

--- a/src/Stylesheets/Variables.scss
+++ b/src/Stylesheets/Variables.scss
@@ -56,6 +56,7 @@ $accent-color2-darker: #aa6e0e;
 //Grises y Blancos
 
 $blanco-puro: #ffffff;
+$blanco: #f6f6f6;
 $gris-basico: #fafafa;
 $gris-intermedio: #636363;
 $gris-oscuro: #757575;
