--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 //Importar las Hojas de Estilo Individuales\@import
 @import "./Stylesheets/Forms.scss";
 @import "./Stylesheets/NavBar.scss";
-
+@import "./Stylesheets/Containers.scss";
 body {
   margin: 0;
   box-sizing: border-box;
