--- a/src/Stylesheets/Containers.scss
+++ b/src/Stylesheets/Containers.scss
@@ -15,7 +15,7 @@
 }
 .flex {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 .space-around {
