--- a/src/Stylesheets/Containers.scss
+++ b/src/Stylesheets/Containers.scss
@@ -1,30 +1,80 @@
 .cardContainer {
-  font-family: $font-title;
-  display: inline-block;
-  background: #f6f6f6;
-  box-sizing: border-box;
+  background: $gris-basico;
   border: 1px solid rgba(107, 112, 115, 0.5);
+  box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
-  padding: 10px;
+  padding: 2.5%;
+  max-width: 75vw;
+}
+.card {
+  background-color: $blanco-puro;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  padding: 2.5%;
+  height: fit-content;
+  flex-basis: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
+  transition: background-color ease-in-out 0.5s;
+  font-family: $font-body;
+
+  .cardElement {
+    flex-basis: 95%;
+  }
+
+  .card-Title {
+    font-family: $font-subtitle;
+    font-size: $font-normal;
+    text-align: center;
+  }
+  &:hover {
+    background-color: lighten($accent-color2-lighter, 15);
+    transform: scale(1.05);
+    cursor: pointer;
+  }
+  @include breakpoint(small-tablet) {
+    flex-basis: 45%;
+  }
+  @include breakpoint(average-tablet) {
+    flex-basis: 40%;
+  }
+  @include breakpoint(large-tablet) {
+    flex-basis: 25%;
+  }
+}
+.cardContainer-Title {
+  width: 100%;
+  font-family: $font-subtitle;
+  font-size: $font-normal;
+  text-align: center;
+  color: $primary-color-darker;
+  @include breakpoint(average-tablet) {
+    font-size: $font-big;
+  }
 }
 .grid {
   display: grid;
   grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
   grid-template-rows: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
 }
-.flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.wh-70vw {
+  width: 70vw;
 }
+
 .space-around {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .space-evenly {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .container {
   display: inline-block;
@@ -36,6 +86,7 @@
   background: $gris-basico;
 }
 .combo-image {
-  height: 150px;
-  width: 150px;
+  background-size: cover;
+  min-height: 20vh;
+  border-radius: 10px;
 }
