--- a/src/Stylesheets/Forms.scss
+++ b/src/Stylesheets/Forms.scss
@@ -1,128 +1,185 @@
-.form-container-questions {
-  width: 100vw;
+// .form-container-questions {
+//   width: 100vw;
+//   display: flex;
+//   justify-content: center;
+//   flex-wrap: wrap;
+
+//   div[class*="form-container-field"] {
+//     flex-basis: 100%;
+//     margin: 5% 2.5%;
+//     flex-wrap: wrap;
+//     display: flex;
+//     justify-content: center;
+//     label {
+//       width: 50%;
+//       font-family: $font-subtitle;
+//       font-size: $font-normal * 1.25;
+//       margin-bottom: 5vh;
+//     }
+//     input {
+//       border: 0px;
+//       border-bottom: 2.5px $gris-oscuro solid;
+//       width: 50%;
+//       transition: width 500ms ease-in-out;
+//       font-size: $font-normal;
+//       &:focus {
+//         outline-width: 0;
+//         width: 100%;
+//         border: 0px;
+//         border-bottom: 3px $primary-color-normal solid;
+
+//         &::placeholder {
+//           color: $accent-color2-dark;
+//         }
+//       }
+//       &::placeholder {
+//         color: $gris-intermedio;
+//         transition: color 1s ease-in-out;
+//       }
+//     }
+//   }
+// }
+// div[class*="form-container-select"] {
+//   flex-basis: 100%;
+//   margin: 5% 2.5%;
+//   flex-wrap: wrap;
+//   display: flex;
+//   justify-content: center;
+//   .radioCheckGroupTitle {
+//     width: 55%;
+//     font-family: $font-subtitle;
+//     font-size: $font-big;
+//   }
+//   .radioCheckGroup {
+//     width: 55%;
+//     label {
+//       font-family: $font-subtitle;
+//       font-size: $font-body;
+//     }
+//   }
+// }
+
+// .form-container-button {
+//   margin: 5vh 0px;
+//   width: 100vw;
+//   display: flex;
+//   justify-content: center;
+
+//   .form-button {
+//     background-color: $primary-color-dark;
+//     border-radius: 5px;
+//     padding: 0.4rem 0.2rem;
+//     width: 95%;
+//     box-shadow: 0px 5px 5px 0px,
+//       inset 0px 2px 2px 0px rgba($color: $blanco-puro, $alpha: 0.3);
+//     span {
+//       color: $blanco-puro;
+//       font-family: $font-body;
+//       font-size: $font-big;
+//     }
+//     transition: background-color 350ms ease-in-out;
+//     &:hover {
+//       background-color: $primary-color-light;
+//     }
+//   }
+// }
+
+// .form-container-title {
+//   width: 100vw;
+//   padding: 2.5% 0px;
+//   display: flex;
+//   justify-content: center;
+//   .form-title {
+//     font-family: $font-subtitle;
+//     font-size: $font-huge;
+//   }
+// }
+
+// @include breakpoint(average-tablet) {
+//   .form-container-questions {
+//     justify-content: space-around;
+//     div[class*="form-container-field"] {
+//       flex-basis: 45%;
+//     }
+//     div[class*="form-container-select"] {
+//       display: flex;
+//       flex-basis: 100%;
+//       justify-content: center;
+//       .radioCheckGroupTitle {
+//         width: 55%;
+//         display: flex;
+//         justify-content: center;
+//       }
+//       .radioCheckGroup {
+//         width: 55%;
+//         display: flex;
+//         justify-content: center;
+//         margin: 1rem 0;
+//       }
+//     }
+//   }
+//   .form-container-button {
+//     justify-content: flex-end;
+//     .form-button {
+//       width: 25%;
+//       margin-right: 10%;
+//     }
+//   }
+// }
+
+// Extra Spice
+
+form label {
+  font-weight: var(--font-weight-md);
+}
+
+/* form button {
+  margin: 0 var(--general-margin);
+} */
+
+.input-width {
+  width: 300px;
+  z-index: 1;
+}
+
+form .form-input {
+  margin: 1rem 0;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-
-  div[class*="form-container-field"] {
-    flex-basis: 100%;
-    margin: 5% 2.5%;
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: center;
-    label {
-      width: 50%;
-      font-family: $font-subtitle;
-      font-size: $font-normal * 1.25;
-      margin-bottom: 5vh;
-    }
-    input {
-      border: 0px;
-      border-bottom: 2.5px $gris-oscuro solid;
-      width: 50%;
-      transition: width 500ms ease-in-out;
-      font-size: $font-normal;
-      &:focus {
-        outline-width: 0;
-        width: 100%;
-        border: 0px;
-        border-bottom: 3px $primary-color-normal solid;
-
-        &::placeholder {
-          color: $accent-color2-dark;
-        }
-      }
-      &::placeholder {
-        color: $gris-intermedio;
-        transition: color 1s ease-in-out;
-      }
-    }
-  }
 }
-div[class*="form-container-select"] {
-  flex-basis: 100%;
-  margin: 5% 2.5%;
-  flex-wrap: wrap;
+
+form .subtitle {
+  align-self: flex-start;
+  margin-bottom: 1rem;
+}
+
+form .rs-form-control-wrapper {
+  z-index: 2;
+}
+form .form-input-reverse {
+  margin: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  .radioCheckGroupTitle {
-    width: 55%;
-    font-family: $font-subtitle;
-    font-size: $font-big;
-  }
-  .radioCheckGroup {
-    width: 55%;
-    label {
-      font-family: $font-subtitle;
-      font-size: $font-body;
-    }
-  }
+  align-items: center;
 }
 
-.form-container-button {
-  margin: 5vh 0px;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-
-  .form-button {
-    background-color: $primary-color-dark;
-    border-radius: 5px;
-    padding: 0.4rem 0.2rem;
-    width: 95%;
-    box-shadow: 0px 5px 5px 0px,
-      inset 0px 2px 2px 0px rgba($color: $blanco-puro, $alpha: 0.3);
-    span {
-      color: $blanco-puro;
-      font-family: $font-body;
-      font-size: $font-big;
-    }
-    transition: background-color 350ms ease-in-out;
-    &:hover {
-      background-color: $primary-color-light;
-    }
-  }
+form .form-section-title {
+  font-size: var(--base-font-size);
+  text-align: center;
 }
 
-.form-container-title {
-  width: 100vw;
-  padding: 2.5% 0px;
-  display: flex;
-  justify-content: center;
-  .form-title {
-    font-family: $font-subtitle;
-    font-size: $font-huge;
+@media (max-width: 480px) {
+  form button {
+    width: 70%;
   }
-}
 
-@include breakpoint(average-tablet) {
-  .form-container-questions {
-    justify-content: space-around;
-    div[class*="form-container-field"] {
-      flex-basis: 45%;
-    }
-    div[class*="form-container-select"] {
-      display: flex;
-      flex-basis: 100%;
-      justify-content: center;
-      .radioCheckGroupTitle {
-        width: 55%;
-        display: flex;
-        justify-content: center;
-      }
-      .radioCheckGroup {
-        width: 55%;
-        display: flex;
-        justify-content: center;
-        margin: 1rem 0;
-      }
-    }
+  form .rs-form-control-wrapper .rs-input {
+    width: 220px;
   }
-  .form-container-button {
-    justify-content: flex-end;
-    .form-button {
-      width: 25%;
-      margin-right: 10%;
-    }
+
+  .input-width {
+    width: 220px;
+    z-index: 1;
   }
 }
